.metals/.reports/metals/r_scala-toplevel-mtags_1691563126555
id: file://<WORKSPACE>/src/test/scala/lab2/exercise2_test.scala:[137..144) in Input.VirtualFile("file://<WORKSPACE>/src/test/scala/lab2/exercise2_test.scala", "package lab2
import chisel3._
import chisel3.tester._
import org.scalatest.FreeSpec
import chisel3.experimental.BundleLiterals._

class  extends FreeSpec with ChiselScalatestTester{
    "MuxLookUp" in {test (new MuxLookup) }")
file://<WORKSPACE>/src/test/scala/lab2/exercise2_test.scala:7: error: expected identifier; obtained extends
class  extends FreeSpec with ChiselScalatestTester{
       ^